--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "treenotesclient",
     "version": "0.1.0",
     "private": true,
+    "proxy": "http://127.0.0.1:8000/",
     "dependencies": {
         "@testing-library/jest-dom": "^5.12.0",
         "@testing-library/react": "^11.2.7",
