--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ djangorestframework-simplejwt==4.7.0
 gunicorn==20.1.0
 psycopg2==2.8.6
 PyJWT==2.1.0
+python-dotenv==0.17.1
 pytz==2021.1
 sqlparse==0.4.1
 whitenoise==5.2.0
